--- a/个人/index.html
+++ b/个人/index.html
@@ -38,7 +38,7 @@
 			<div class="row">
 				<label id="homepage">GitHub主页:</label>
 				<label id="homepageValue">
-					<a href="javascript:;" title="主页">#</a>
+					<a href="javascript:;" title="主页">https://tj172.github.io/%E4%B8%AA%E4%BA%BA/index.html</a>
 				</label>
 			</div>
 			<div class="row">
