--- a/TJ3/html/vip.html
+++ b/TJ3/html/vip.html
@@ -17,8 +17,8 @@
 	            	<a href="#" class="nav_f1">会员权益</a>
 	                <a href="https://www.ketangpai.com/VipActivity/feainfo.html">功能特权</a>
 	                <a href="#">会员帮助</a>
-	                <a href="#">对公支付</a>
-	                <a href="#">交易记录</a>
+	                <a href="vip_4.html">对公支付</a>
+	                <a href="vip_5.html">交易记录</a>
 	            </div>
 	            <div class="user_nav fr">
 	                <div class="t_login">
@@ -29,10 +29,10 @@
 	        </div>
    		</div>
    		<div class="vip_privilege"></div>
-   		<div class="vip_privilege_lists cWidth clearfix" style="width: 1080px;">
+   		<div class="vip_privilege_lists cWidth">
 			<h1><b class="left"></b>教师尊享特权<b class="right"></b></h1>
 			<ul>
-				<li>
+				<li onclick="location.href = '#1'">
 					<div class="lists_img">
 						<a class="i1"></a>
 					</div>
@@ -130,8 +130,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="vip_privilege_lists cWidth clearfix" style="width: 1080px;">
-
+		<div class="vip_privilege_lists cWidth">
 			<h1><b class="left"></b>学生尊享特权<b class="right"></b></h1>
 			<ul>
 				<li>
