--- a/个人/index.html
+++ b/个人/index.html
@@ -75,7 +75,9 @@
 			<ol>
 				<li class="job">
 					<h3>负责部分</h3>
-					<div class="employer">会员权益: <a href="https://tj172.github.io/TJ3/html/vip.html">https://tj172.github.io/TJ3/html/vip.html</a>、<br />本地化部署: <a href="https://tj172.github.io/TJ3/html/local.html">https://tj172.github.io/TJ3/html/local.html</a></div>
+					<div class="employer">会员权益: <a href="https://tj172.github.io/TJ3/html/vip.html">https://tj172.github.io/TJ3/html/vip.html</a>、<br />本地化部署: <a href="https://tj172.github.io/TJ3/html/local.html">https://tj172.github.io/TJ3/html/local.html</a>
+					对公支付：<a href="https://tj172.github.io/TJ3/html/vip_4.html">https://tj172.github.io/TJ3/html/vip_4.html</a>、<br />交易记录：<a href="https://tj172.github.io/TJ3/html/vip_5.html">https://tj172.github.io/TJ3/html/vip_5.html</a>
+					</div>
 					<p class="description">本次项目网页偏简单，我负责的版块更是如此，基本都是静态网页布局，<br />头部有百分比，利用calc()函数动态获取div宽度，相应的按钮留在合适的位置，<br />设置最小宽度，当浏览器窗口变化时防止页面元素掉落</p>
 				</li>
 				<li class="job">
